# SMTP-Server

./: .gitignore  Makefile  README.md  build.sh  build_debug.sh
ReportClient/: Makefile  doxygen.cfg
ReportClient/tex/: report_client.aux  (+3 more)
ReportServer/: Makefile  cflow.ignore  doxygen.cfg
SMTPClient/: CMakeLists.txt  Makefile  client.c  client.h  main.c
SMTPClient/autogen/: autogen.sh  client-fsm.c  client-fsm.h  client-opts.c  client-opts.def  client-opts.h  client.def  client_fsm_handlers.c  client_fsm_handlers.h
SMTPClient/dirwork/: dir_worker.c  dir_worker.h
SMTPClient/smtp/: parcer.c  parcer.h  parser.c  parser.h  smtp_conn.c  smtp_conn.h
SMTPClient/test_mails/: mail_1
SMTPClient/tests/: test.c  test_dirwork.c  test_dirwork.h  test_parcer.c  test_parcer.h  test_parser.c  test_parser.h
SMTPClient/work_mails/: mail_1  mail_2
SMTPServer/: CMakeLists.txt  Makefile  client.c  client.h  commands.c  commands.h  commands_parser.c  commands_parser.h  fsm_handlers.c  fsm_handlers.h  mail.c  mail.h  main.c  old_server.c.b  pollbuf_dictionary.c  pollbuf_dictionary.h  server.c  server.h
SMTPServer/autogen/: autogen.sh  server-fsm.c  server-fsm.h  server-opts.c  server-opts.def  server-opts.h  server.def
SMTPServer/tests/: sys_test.py  test.c  test_client.c  test_client.h  test_fsm_handlers.c  test_fsm_handlers.h  test_mail.c  test_mail.h  test_parser.c  test_parser.h  test_server.c  test_server.h
SMTPShared/: dir_helper.c  dir_helper.h  full_io.c  full_io.h  shared_strings.c  shared_strings.h  socket_dictionary.c  socket_dictionary.h
rpz/: Makefile
(+27 files in other folders)
